@@ -1,6 +1,9 @@
 # ChangeLog for net-im/ekg2
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/ekg2/ChangeLog,v 1.26 2008/08/05 16:40:39 gentoofan23 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/ekg2/ChangeLog,v 1.27 2009/01/14 05:23:17 vapier Exp $
+
+  14 Jan 2009; Mike Frysinger <vapier@gentoo.org> ekg2-20061202.ebuild:
+  Touchup style.
 
   05 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org> metadata.xml:
   Add USE flag description to metadata as per GLEP 56.
